--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Beauty Zone</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/main.min.css">
 </head>
 
 <body>
@@ -155,7 +155,7 @@
           <ul class="procedures__items">
 
             <li class="procedures__item">
-              <img src="images/procedures-img1.jpg" alt="">
+              <img class="procedures__item-img" src="images/procedures-img1.jpg" alt="">
               <p class="procedures__item-text">
                 Маски <br> для обличчя
               </p>
@@ -163,13 +163,13 @@
 
 
             <li class="procedures__item">
-              <img src="images/procedures-img2.png" alt="">
+              <img class="procedures__item-img" src="images/procedures-img2.png" alt="">
               <p class="procedures__item-text">
                 Ін'єкції для обличчя
               </p>
             </li>
             <li class="procedures__item">
-              <img src="images/procedures-img3.png" alt="">
+              <img class="procedures__item-img" src="images/procedures-img3.png" alt="">
               <p class="procedures__item-text">
                 Очищення обличчя
               </p>
